loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:11: error: 'while' expected but 'do' found.
  do{
  ^Poucet2:14: error: '(' expected but ';' found.
  while(nbbiscuit>=3)
^Poucet2:18: error: illegal start of simple expression
  }
  ^Poucet2:19: error: 'while' expected but identifier found.
  nbbiscuit=0
  ^Poucet2:20: error: '(' expected but '}' found.
}
^